--- a/test-output/index.html
+++ b/test-output/index.html
@@ -147,7 +147,7 @@
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite name=&quot;nopCommerce&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;listeners&gt;
-    &lt;listener class-name=&quot;com.nopCommerce.utilities.Reporting&quot;/&gt;
+    &lt;listener class-name=&quot;com.nopCommerce.utilities.ReportingExample&quot;/&gt;
   &lt;/listeners&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Test1&quot;&gt;
     &lt;classes&gt;
@@ -195,12 +195,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'loginTest')
 data.setCell(0, 2, 'com.nopCommerce.testCase.TC_LoginTest_001')
-data.setCell(0, 3, 13022);
+data.setCell(0, 3, 11929);
 window.suiteTableData['nopCommerce']= { tableData: data, tableDiv: 'times-div-nopCommerce'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 13 seconds</span>
+              <span class="suite-total-time">Total running time: 11 seconds</span>
               <div id="times-div-nopCommerce">
               </div> <!-- times-div-nopCommerce -->
             </div> <!-- times-div -->
@@ -235,11 +235,11 @@ return data;
                 <img src="failed.png">
                 </img>
                 <span class="method-name">loginTest</span>
-                <span class="method-start">7445 ms</span>
+                <span class="method-start">7391 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">20489 ms</span>
+                <span class="method-start">19332 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
